WT-11233: fix dialogs remaining visible when hidden with Bootstrap 5
This fixes a regression in Wt 4.9.0 when using WBootstrap5Theme.

The d-block class forces display: block with !important. This makes
it so we can't properly set display: none anymore. Instead of adding
the d-block class, let's add display: block to the .Wt-dialog.modal
selector.

All Bootstrap 5 based themes were recompiled:

- Default Bootstrap 5 theme
- Widget gallery themes (Wt and JWt)
- custom-bs-theme example

--- a/src/themes/bootstrap/5/wt/widgets/_dialog.scss
+++ b/src/themes/bootstrap/5/wt/widgets/_dialog.scss
@@ -30,6 +30,8 @@
 }
 
 .Wt-dialog.modal {
+  display: block; // .modal automatically adds 'none', but we do visibility differently
+
   height: auto;
   width: auto;
 
